--- a/app/views/guest/users/show.html.erb
+++ b/app/views/guest/users/show.html.erb
@@ -1,5 +1,3 @@
-<%= render 'partial/navbar' %>
-
 <!-- 認証チェックマーク -->
 <script type="text/javascript">
   $(function(){
@@ -43,6 +41,8 @@
     </div>
 
     <div class="col-lg-9 col-md-8 col-sm-12">
+    <li><%= link_to "プロフィール編集", edit_user_registration_path %></li>
+    <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
       <h1>こんにちは<%= @user.name %>です！</h1>
       <p>自己紹介</p>
     </div>
