--- a/app/views/guest/likes/index.html.erb
+++ b/app/views/guest/likes/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Guest::Likes#index</h1>
-<p>Find me in app/views/guest/likes/index.html.erb</p>
+index
+<% @users.each do |user| %>
+  <%= user.id %>
+<% end %>
