--- a/app/views/guest/messages/index.html.erb
+++ b/app/views/guest/messages/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Guest::Messages#index</h1>
-<p>Find me in app/views/guest/messages/index.html.erb</p>
+<% current_user.partnerships.each do |partnership| %>
+  <%= partnership.partner(current_user).inspect %>
+  <%= link_to 'プロフィール詳細',message_path(partnership.partner(current_user)) %>
+<% end %>
