コミュニティ作成

--- a/app/views/guest/communities/show.html.erb
+++ b/app/views/guest/communities/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Guest::Communities#show</h1>
-<p>Find me in app/views/guest/communities/show.html.erb</p>
+<h1>show</h1>
+<%= @community.name %>
+<%= @community.category %>
+<%= @community.introduce %>
+<%= image_tag @community.image.thumb %>
