--- a/app/views/guest/communities/index.html.erb
+++ b/app/views/guest/communities/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Guest::Communities#index</h1>
-<p>Find me in app/views/guest/communities/index.html.erb</p>
+<h1>コミュニティ</h1>
+
+<%= link_to 'コミュニティ作成', new_community_path %>
+<% @communities.each do |community| %>
+<div class="commu-container">
+  <%= link_to community_path(community.id) do %>
+    <%= community.name %>
+    <%= image_tag(community.image, size: '50') %>
+    <%= community.user.name %>
+    <%= community.introduce %>
+  <% end %>
+
+</div>
+<% end %>
