--- a/app/views/guest/communities/show.html.erb
+++ b/app/views/guest/communities/show.html.erb
@@ -9,7 +9,7 @@
 
 <% @topics.each do |t| %>
 <div class="commu-container">
-  <%= link_to topic_path(t.id) do %>
+  <%= link_to topic_path(t.id, community_id: @community.id) do %>
     <%= t.id %>
     <%= t.title %>
     <%= t.body %>
