--- a/app/views/guest/topics/show.html.erb
+++ b/app/views/guest/topics/show.html.erb
@@ -12,7 +12,7 @@
   <%= f.text_area :body %>
 
 
-  <%= f.hidden_field :community_id, value: .id %>
+  <%= f.hidden_field :community_id, value: @topic.community.id %>
   <%= f.hidden_field :user_id, value: current_user.id %>
   <%= f.submit '保存', data: { confirm: 'この内容で保存してもいいですか', disable_with: '処理中...' } %>
 
