--- a/app/views/guest/_header.html.erb
+++ b/app/views/guest/_header.html.erb
@@ -4,6 +4,7 @@
         <li><%= link_to 'お相手からのいいね', likes_path %></li>
         <li><%= link_to 'メッセージ', messages_path %></li>
         <li><%= link_to 'コミュニティ', communities_path %></li>
+        <li><%= link_to 'つぶやき', murmurs_path %></li>
         <li><%= link_to 'マイページ', user_path(current_user) %></li>
     </ul>
 </nav>
