--- a/app/assets/stylesheets/guest/app.sass
+++ b/app/assets/stylesheets/guest/app.sass
@@ -1,2 +1,16 @@
-@import "pages"
-@import "searches"
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700")
+
+// Core variables and mixins
+@import "settings"
+@import "mixin"
+
+// Reset
+@import "reset"
+
+// Core CSS
+@import "grid"
+@import "style"
+
+@import "parts/*"
+@import "modules/*"
+@import "layers/*"
