--- a/app/views/guest/_header.html.slim
+++ b/app/views/guest/_header.html.slim
@@ -2,8 +2,8 @@ nav.global-navi
   ul
     li
       = link_to 'さがす', searches_path
-    li
-      = link_to 'お相手からのいいね', likes_path
+    / li
+    /   = link_to 'お相手からのいいね', likes_path
     li
       = link_to 'メッセージ', messages_path
     li
