topスタイル追加

--- a/app/views/guest/_header.html.slim
+++ b/app/views/guest/_header.html.slim
@@ -1,9 +1,7 @@
-nav.global-navi
+nav.guest_header
   ul
     li
       = link_to 'さがす', searches_path
-    / li
-    /   = link_to 'お相手からのいいね', likes_path
     li
       = link_to 'メッセージ', messages_path
     li
@@ -12,3 +10,4 @@ nav.global-navi
       = link_to 'つぶやき', murmurs_path
     li
       = link_to 'マイページ', user_path(current_user)
+
