トップ作成

--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -16,11 +16,11 @@
     // padding-top: 80px
   &_button
     +fontsize(24)
+    margin: 0 auto 20px
     padding: 15px 10px
     display: block
-    background: $white
     width: 80%
-    margin: 0 auto 20px
+    background: $white
     border-radius: 10px
 .logo
   margin-top: 80px
@@ -31,10 +31,32 @@
     top: 250px
     left: 25%
     width: 400px
-    height: 300px
+    height: 350px
     background: rgba( $red, 0.5 )
     border-radius: 10px
   &-title
     color: $white
   &-btns
     margin: 20px 0
+    small
+      color: $white
+  &_button
+    +fontsize(24)
+    margin: 10px auto 0
+    padding: 15px 10px
+    display: block
+    width: 80%
+    color: $white
+    background: #FC8487
+    border: 2px solid $white
+    border-radius: 10px
+.facebook_button
+  +fontsize(24)
+  margin: 0 auto
+  padding: 15px 10px
+  display: block
+  width: 80%
+  color: $white
+  background: #354E90
+  border: 2px solid $white
+  border-radius: 10px
