--- a/app/views/guest/likes/index.html.slim
+++ b/app/views/guest/likes/index.html.slim
@@ -1,7 +1,91 @@
-| index 
-- @like_users.each do |like_user|
-  = link_to like_path(like_user) do
-    = image_tag like_user.user_profile.image1.thumb
-    = like_user.id
-    = like_user.email
-  = link_to 'ありがとう', match_like_path(current_user, target: like_user)
+doctype html
+html lang="en" 
+  head
+    title Bootstrap Case
+    meta charset="utf-8" /
+    meta content="width=device-width, initial-scale=1" name="viewport" /
+    link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" /
+    script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" 
+    script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+  body
+    .container
+      ul.nav.nav-tabs
+        li.active
+          a data-toggle="tab" href="#home"  相手からのいいね
+        li
+          a data-toggle="tab" href="#menu1"  マッチした相手
+
+      .tab-content
+        #home.tab-pane.fade.in.active
+          li.list-group-item
+            .col-xs-12.col-sm-3
+              img.img-responsive.img-circle alt=("Scott Stevens") src="http://api.randomuser.me/portraits/men/49.jpg" /
+            .col-xs-12.col-sm-9
+              span.name Scott Stevens
+              span.age　23歳
+              span.address 　東京
+            .col-xs-12.col-sm-3.pull-right
+              = button_to "ありがとう"
+
+              br/
+              br/
+            .clearfix
+          li.list-group-item
+            .col-xs-12.col-sm-3
+              img.img-responsive.img-circle alt=("Seth Frazier") src="http://api.randomuser.me/portraits/men/97.jpg" /
+            .col-xs-12.col-sm-9
+              span.name Seth Frazier
+              span.age　23歳
+              span.address 　東京
+            .col-xs-12.col-sm-3.pull-right
+              = button_to "ありがとう"
+
+              br/
+              br/
+            .clearfix
+          li.list-group-item
+            .col-xs-12.col-sm-3
+              img.img-responsive.img-circle alt=("Jean Myers") src="http://api.randomuser.me/portraits/women/90.jpg" /
+            .col-xs-12.col-sm-9
+              span.name Jean Myers
+              span.age　23歳
+              span.address 　東京
+            .col-xs-12.col-sm-3.pull-right
+              = button_to "ありがとう"
+
+              br/
+              br/
+            .clearfix
+
+            .clearfix
+        #menu1.tab-pane.fade
+          li.list-group-item
+            .col-xs-12.col-sm-3
+              img.img-responsive.img-circle alt=("Todd Shelton") src="http://api.randomuser.me/portraits/men/24.jpg" /
+            .col-xs-12.col-sm-9
+              span.name Todd Shelton
+              span.age　23歳
+              span.address 　東京
+            .col-xs-12.col-sm-3.pull-right
+              = button_to "ありがとう"
+
+              br/
+              br/
+            .clearfix
+          li.list-group-item
+            .col-xs-12.col-sm-3
+              img.img-responsive.img-circle alt=("Rosemary Porter") src="http://api.randomuser.me/portraits/women/34.jpg" /
+            .col-xs-12.col-sm-9
+              span.name Rosemary Porter
+              span.age　23歳
+              span.address 　東京
+            .col-xs-12.col-sm-3.pull-right
+              = button_to "ありがとう"
+
+              br/
+              br/
+            .clearfix
+            .clearfix
+
+
+
