--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -1,3 +1,4 @@
+= render 'partial/mypage_navbar'
 button.btn.btn-primary.btn-lg[type="button" data-toggle="modal" data-target="#sampleModal"]
   |  検索 
 #sampleModal.modal.fade[tabindex="-1"]
@@ -17,3 +18,34 @@ button.btn.btn-primary.btn-lg[type="button" data-toggle="modal" data-target="#sa
       = profile.user.id
       = profile.user.email
     = good(profile.user)
+
+.container
+  .row
+    .gallery.col-lg-12.col-md-12.col-sm-12.col-xs-12
+
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.hdpe
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.sprinkle
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.hdpe
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.irrigation
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.spray
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.irrigation
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.spray
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.irrigation
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.irrigation
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.hdpe
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.spray
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.sprinkle
+      img.img-responsive src="http://fakeimg.pl/365x365/" /
+
+
