--- a/app/views/guest/likes/index.html.slim
+++ b/app/views/guest/likes/index.html.slim
@@ -25,8 +25,8 @@ html lang="en"
               span.age　23歳
               span.address 　東京
             .col-xs-12.col-sm-3.pull-right
-              = button_to "ありがとう"
-
+              = button_to "", class: 'thanks_button'
+                | ありがとう
               br/
               br/
             .clearfix
@@ -38,8 +38,8 @@ html lang="en"
               span.age　23歳
               span.address 　東京
             .col-xs-12.col-sm-3.pull-right
-              = button_to "ありがとう"
-
+              = button_to "", class: 'thanks_button'
+                | ありがとう
               br/
               br/
             .clearfix
@@ -51,8 +51,8 @@ html lang="en"
               span.age　23歳
               span.address 　東京
             .col-xs-12.col-sm-3.pull-right
-              = button_to "ありがとう"
-
+              = button_to "", class: 'thanks_button'
+                | ありがとう
               br/
               br/
             .clearfix
@@ -67,8 +67,8 @@ html lang="en"
               span.age　23歳
               span.address 　東京
             .col-xs-12.col-sm-3.pull-right
-              = button_to "ありがとう"
-
+              = button_to "", class: 'thanks_button'
+                | チャットする
               br/
               br/
             .clearfix
@@ -80,8 +80,8 @@ html lang="en"
               span.age　23歳
               span.address 　東京
             .col-xs-12.col-sm-3.pull-right
-              = button_to "ありがとう"
-
+              = button_to "", class: 'thanks_button'
+                | チャットする
               br/
               br/
             .clearfix
