--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -60,3 +60,13 @@
   background: #354E90
   border: 2px solid $white
   border-radius: 10px
+.thanks_button
+  +fontsize(24)
+  margin: 0 auto
+  padding: 15px 10px
+  display: block
+  width: 80%
+  color: $white
+  background: #b30a2e
+  border: 2px solid $white
+  border-radius: 10px
