--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -70,3 +70,10 @@
   background: #b30a2e
   border: 2px solid $white
   border-radius: 10px
+.nav.nav-tabs
+  +fontsize(32)
+  li
+    padding: 0px 0px 0px 250px
+    
+
+
