--- a/app/views/guest/_header.html.slim
+++ b/app/views/guest/_header.html.slim
@@ -1,13 +1,21 @@
-nav.guest_header
-  ul
-    li
-      = link_to 'さがす', searches_path
-    li
-      = link_to 'メッセージ', messages_path
-    li
-      = link_to 'コミュニティ', communities_path
-    li
-      = link_to 'つぶやき', murmurs_path
-    li
-      = link_to 'マイページ', user_path(current_user)
+
+.navbar
+  .navbar-main
+    .navbar-body
+      .navbar_site_title
+        = link_to root_path
+          = image_tag 'lemon_logo', :size => "30"
+          small = '性別にとらわれない健全な交流の場'
+
+  .navbar-sub
+    .navbar-body
+      ul.navbar-content
+        li = link_to "さがす", searches_path
+        li = link_to "いいね", likes_path
+        li = link_to 'コミュニティ', communities_path
+        li = link_to 'つぶやき', murmurs_path
+        li = link_to "マイページ", user_path(current_user)
+
+  / #sidemenu-button = fa_icon 'bars'
+
 
