mypage右側70%完成(rails入れてない)

--- a/app/assets/stylesheets/guest/_settings.sass
+++ b/app/assets/stylesheets/guest/_settings.sass
@@ -60,7 +60,7 @@ $font-small: 14
 $font-medium: 16
 $font-large: 18
 $font-xlarge: 20
-$font-xxlarge: 22
+$font-xxlarge: 22px
 
 $color-sns-facebook: #3b5998
 
