--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -46,16 +46,14 @@ a
       width: 100%
       margin-left: 2px
       margin-right: 20px
-
+      padding-top: 120px
     // SP
     @media (max-width: $screen-max-tablet)
       width: 100%
       margin: 0 0 10px
-  &_mypage
-    padding-top: 120px
-    &_container
-      display: flex
-      padding-top: 30px
+  &_mypage_container
+    display: flex
+    padding-top: 30px
   &_profile_content
     @media (min-width: $screen-max-tablet)
       // float: left
