--- a/app/assets/stylesheets/guest/layers/_navbar.sass
+++ b/app/assets/stylesheets/guest/layers/_navbar.sass
@@ -62,7 +62,8 @@
         margin-left: 1em
       +responsive(smartphone)
         display: block
-
+  &_logout_button
+    float: right
   &_site_search
     float: left
     margin: 15px 0 0 30px
