マイページ微調整

--- a/app/assets/stylesheets/guest/layers/_mypage.sass
+++ b/app/assets/stylesheets/guest/layers/_mypage.sass
@@ -13,9 +13,15 @@
       margin: 0 0 10px
   &_badges
     text-align: right
-    margin-bottom: 20px
+    margin-bottom: 16px
     img
       margin-left: 5px
+  &_gage
+    height: 60px
+    width: 100%
+    margin-bottom: 30px
+    border: 2px solid $red
+    border-radius: 5px
   &_profile_label
     background-color: $light-gray
     padding: 10px 30px 10px 30px
