--- a/app/assets/stylesheets/guest/layers/_sidebar.sass
+++ b/app/assets/stylesheets/guest/layers/_sidebar.sass
@@ -1,5 +1,15 @@
 .sidebar
   +fontsize($font-small)
+  &_title
+    margin-left: 30px
+    margin-bottom: 30px
+  &_preview_button
+    @extend %button_small
+    @extend %button_primary
+    font-size: 18px
+    padding: 20px 35px
+    border-radius: 10px
+    margin-bottom: 30px
   &_image
     position: relative
     .img-radius
