--- a/app/views/guest/murmurs/_murmur.html.slim
+++ b/app/views/guest/murmurs/_murmur.html.slim
@@ -1,5 +1,5 @@
 section.murmur_panel
-  .murmur_user
+  .murmur_contributor
     .userSignature
       .user_image
         = image_tag murmur.user.user_profile.image1.thumb, class: 'img-circle', size: '100'
@@ -9,18 +9,19 @@ section.murmur_panel
         .user_address = murmur.user.user_profile.prefecture.name
     .murmur_datetime
       = murmur.created_at.strftime('%Y年%m月%d日')
-  .murmur_body
-      = murmur.body
-      - if murmur.image?
-        .murmur_image
-          = image_tag murmur.image, width: '500'
-      .murmur_smile
-        = image_tag 'smile', width: '50'
-        = 'スマイル'
-
-- if current_user == murmur.user
-  = link_to '編集', edit_murmur_path(id: murmur)
-  = link_to '削除', murmur_path(id: murmur), method: :delete, data: { confirm: 'Are you sure?' }
-- else
-  = link_to 'コメントする', new_murmur_comment_path(id: murmur.id)
-= link_to 'つぶやく', new_murmur_path
+  .murmur_panel_body
+    = murmur.body
+    - if murmur.image?
+      .murmur_image
+        = image_tag murmur.image, width: '500'
+  .murmur_panel_footer
+    .murmur_smile
+      = image_tag 'smile', width: '50'
+      = 'スマイル'
+    .murmur_items
+      - if current_user == murmur.user
+        = link_to '編集', edit_murmur_path(id: murmur)
+        = link_to '削除', murmur_path(id: murmur), method: :delete, data: { confirm: 'Are you sure?' }
+      - else
+        = link_to 'コメントする', new_murmur_comment_path(id: murmur.id)
+hr
