--- a/app/views/guest/users/show.html.slim
+++ b/app/views/guest/users/show.html.slim
@@ -1,10 +1,10 @@
 
 = image_tag 'premire_baner', width: '100%', class: 'baner-image'
-.mypage_container
+#layout_flex
   / mypage左サイド
   = render 'sidebar'
   / mypage右サイド
-  .mypage_content
+  #layout_right
     .mypage_badges
       = image_tag 'l'
       = image_tag 'g'
