さがす画面

--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -36,7 +36,7 @@ a
     left: 0
     right: 0
     +responsive(pc)
-      position: fixed
+      position: static
       background: $white
       z-index: 9999
   &_content
