--- a/app/assets/stylesheets/guest/layers/_navbar.sass
+++ b/app/assets/stylesheets/guest/layers/_navbar.sass
@@ -19,7 +19,7 @@
     background: rgba($white, 0.85)
 
   &-body
-    position: relative
+    position: static
     @extend %container
     // PC
     @media (min-width: $screen-max-tablet)
