--- a/app/views/guest/users/_sidebar.html.slim
+++ b/app/views/guest/users/_sidebar.html.slim
@@ -1,4 +1,4 @@
-.sidebar
+/*.sidebar
   // Facebook
   h4 プロフィール
   section.sidebar_section
@@ -59,4 +59,4 @@
   /       |  電話番号
   /     br
   /     #ver-facebook
-  /       |  facebook
+  /       |  facebook*/
