navbarとcontentの幅調整&プログレスバー作成

--- a/app/assets/stylesheets/guest/layers/_mypage.sass
+++ b/app/assets/stylesheets/guest/layers/_mypage.sass
@@ -1,15 +1,22 @@
 .mypage
   &_badges
     text-align: right
-    margin-bottom: 16px
+    margin-bottom: 24px
     img
       margin-left: 5px
-  &_gage
-    height: 60px
+  &_gage_panel
+    display: flex
+    justify-content: space-between
     width: 100%
     margin-bottom: 30px
     border: 2px solid $red
     border-radius: 5px
+    padding: 16px
+  &_gage_bar
+    width: 65%
+    .progressbar
+      background-color: $red
+      // border-radius: 5px
   &_profile_label
     background-color: $light-gray
     padding: 10px 30px 10px 30px
@@ -38,6 +45,7 @@
       -moz-border-radius: 5px
     img
       margin: 5px 8px
+
 
 
 
