--- a/app/assets/stylesheets/guest/layers/_navbar.sass
+++ b/app/assets/stylesheets/guest/layers/_navbar.sass
@@ -10,6 +10,7 @@
 .navbar
   +responsive(smartphone)
     position: relative
+    margin-bottom: 0
   &-main
     padding: 10px 0
     border-bottom: 1px solid $gray
