--- a/app/views/layouts/guest.html.slim
+++ b/app/views/layouts/guest.html.slim
@@ -5,6 +5,8 @@ html
       | Lemon
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     link[rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"]
+    = stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/cupertino/jquery-ui.min.css"
+    = stylesheet_link_tag 'https://www.w3schools.com/w3css/4/w3.css'
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body
