ゲージ完成

--- a/app/assets/stylesheets/guest/layers/_userSignature.sass
+++ b/app/assets/stylesheets/guest/layers/_userSignature.sass
@@ -9,11 +9,11 @@
       img
         width: 100%
     &_info
-      margin-left: 20px
+      // margin-left: 10px
       +fontsize($font-small)
     &_name
       display: inline
-      margin-right: 20px
+      margin-left: 10px
       font-weight: bold
       font-size: $font-xxlarge
       +responsive(smartphone)
@@ -23,6 +23,6 @@
         +fontsize($font-xsmall)
     &_age, &_address
       display: inline
-      margin-right: 10px
+      margin-left: 10px
       font-size: 14px
 
