--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -1,51 +1,29 @@
-= render 'partial/mypage_navbar'
-button.btn.btn-primary.btn-lg[type="button" data-toggle="modal" data-target="#sampleModal"]
-  |  検索
-#sampleModal.modal.fade[tabindex="-1"]
-  .modal-dialog
-    .modal-content
-      .modal-header
-        button.close[type="button" data-dismiss="modal"]
-          span
-            | ×
-        h4.modal-title
-          | 検索
-      .modal-body
-        = render 'search'
-- @user_profiles.each do |profile|
-  div
-    = link_to search_path(profile.user.id) do
-      = profile.user.id
-      = profile.user.email
-    = good(profile.user)
-
 .container
+  button.btn.btn-primary.btn-lg[type="button" data-toggle="modal" data-target="#sampleModal"]
+    |  検索
+  #sampleModal.modal.fade[tabindex="-1"]
+    .modal-dialog
+      .modal-content
+        .modal-header
+          button.close[type="button" data-dismiss="modal"]
+            span
+              | ×
+          h3.modal-title
+            | 検索
+        .modal-body
+          = render 'search'
+  - @user_profiles.each do |profile|
+    div
+      = link_to search_path(profile.user.id) do
+        = profile.user.id
+        = profile.user.email
+      = good(profile.user)
+
+.container-sub
   .row
-    .gallery.col-lg-12.col-md-12.col-sm-12.col-xs-12
-
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.hdpe
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.sprinkle
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.hdpe
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.irrigation
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.spray
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.irrigation
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.spray
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.irrigation
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.irrigation
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.hdpe
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.spray
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-    .gallery_product.col-lg-4.col-md-4.col-sm-4.col-xs-6.filter.sprinkle
-      img.img-responsive src="http://fakeimg.pl/365x365/" /
-
-
+    .card
+      img.card-img alt="" src="images/bear.jpg" /
+      .card-content
+        h1.card-title 属性　ユーザ名　年齢
+        = button_to "", class: 'thanks_button'
+          | いいね
